--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.6.1",
+    "clsx": "^1.2.1",
     "framer-motion": "^8.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "tailwind-merge": "^1.8.1",
     "use-key-state": "^0.1.9",
     "zustand": "^4.1.5"
   },
