--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/lib/Kime"]
-	path = src/lib/Kime
-	url = https://github.com/60fov/Kime.git
+[submodule "src/lib/kime"]
+	path = src/lib/kime
+	url = https://github.com/60fov/Kime
