--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "test": "vitest"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -45,7 +46,8 @@
     "prettier-plugin-tailwindcss": "^0.2.4",
     "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vitest": "^0.29.8"
   },
   "ct3aMetadata": {
     "initVersion": "7.5.9"
