--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "sonner": "^0.3.5",
     "superjson": "1.9.1",
     "tailwind-merge": "^1.12.0",
     "zod": "^3.21.4",
