--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "test": "vitest"
+    "test": "vitest",
+    "db-seed": "NODE_ENV=development prisma db seed"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
@@ -33,6 +37,8 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.1",
+    "@paralleldrive/cuid2": "^2.2.0",
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.16.13",
     "@types/prettier": "^2.7.2",
@@ -48,6 +54,7 @@
     "prettier-plugin-tailwindcss": "^0.2.8",
     "prisma": "^4.14.1",
     "tailwindcss": "^3.3.2",
+    "tsx": "^3.12.7",
     "typescript": "^4.9.5",
     "vitest": "^0.29.8"
   },
