--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
+    "@nivo/line": "^0.83.0",
     "@prisma/client": "^4.14.1",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.27.1",
