--- a/package.json
+++ b/package.json
@@ -15,44 +15,45 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.6",
-    "@prisma/client": "^4.14.1",
-    "@tanstack/react-query": "^4.29.7",
-    "@trpc/client": "^10.27.1",
-    "@trpc/next": "^10.27.1",
-    "@trpc/react-query": "^10.27.1",
-    "@trpc/server": "^10.27.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@nivo/line": "^0.83.0",
+    "@prisma/client": "^4.15.0",
+    "@tanstack/react-query": "^4.29.12",
+    "@trpc/client": "^10.29.0",
+    "@trpc/next": "^10.29.0",
+    "@trpc/react-query": "^10.29.0",
+    "@trpc/server": "^10.29.0",
     "clsx": "^1.2.1",
-    "framer-motion": "^10.12.12",
+    "framer-motion": "^10.12.16",
     "nanoid": "^4.0.2",
-    "next": "^13.4.3",
+    "next": "^13.4.4",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.9.0",
     "sonner": "^0.3.5",
     "superjson": "1.9.1",
-    "tailwind-merge": "^1.12.0",
+    "tailwind-merge": "^1.13.0",
     "zod": "^3.21.4",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.0.1",
+    "@faker-js/faker": "^8.0.2",
     "@paralleldrive/cuid2": "^2.2.0",
-    "@types/eslint": "^8.37.0",
-    "@types/node": "^18.16.13",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "^18.2.6",
+    "@types/eslint": "^8.40.0",
+    "@types/node": "^18.16.16",
+    "@types/prettier": "^2.7.3",
+    "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.41.0",
-    "eslint-config-next": "^13.4.3",
-    "postcss": "^8.4.23",
+    "eslint": "^8.42.0",
+    "eslint-config-next": "^13.4.4",
+    "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
-    "prisma": "^4.14.1",
+    "prisma": "^4.15.0",
     "tailwindcss": "^3.3.2",
     "tsx": "^3.12.7",
     "typescript": "^4.9.5",
