--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@trpc/react-query": "^10.29.0",
     "@trpc/server": "^10.29.0",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
     "framer-motion": "^10.12.16",
     "nanoid": "^4.0.2",
     "next": "^13.4.4",
@@ -54,6 +55,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "prisma": "^4.15.0",
+    "sass": "^1.62.1",
     "tailwindcss": "^3.3.2",
     "tsx": "^3.12.7",
     "typescript": "^4.9.5",
