--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "framer-motion": "^10.12.16",
+    "fuzzysort": "^2.0.4",
     "nanoid": "^4.0.2",
     "next": "^13.4.4",
     "next-auth": "^4.22.1",
