pre-mvp clean up
- removed all db/user-session from app
- prep'd interface
- added logo/favicons
- added audio
- tons of misc stuff

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,8 @@
       "@/components/*": ["./src/components/*"],
       "@/ui/*": ["./src/components/ui/*"],
       "@/utils/*": ["./src/utils/*"],
+      "@/audio/*": ["./data/audio/*"],
+      "@/images/*": ["./data/images/*"],
     }
   },
   "include": [
