--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sonner": "^0.3.5",
     "superjson": "1.9.1",
     "tailwind-merge": "^1.13.0",
+    "usehooks-ts": "^2.9.1",
     "zod": "^3.21.4",
     "zustand": "^4.3.8"
   },
