--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "start": "next start",
     "test": "vitest",
-    "db-seed": "NODE_ENV=development prisma db seed"
+    "db-seed": "NODE_ENV=development prisma db seed",
+    "dev:ws": "node --watch --watch-preserve-output ws/server.js"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -36,6 +37,7 @@
     "sonner": "^0.3.5",
     "superjson": "1.9.1",
     "tailwind-merge": "^1.13.0",
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.31.0",
     "usehooks-ts": "^2.9.1",
     "zod": "^3.21.4",
     "zustand": "^4.3.8"
